<resources>
    <string name="app_name">AppSchoolGrades</string>
    <string name="button_calculate">Calculate</string>
    <string name="button_reset">Reset</string>
    <string name="hint_grade_1">Grade 1</string>
    <string name="hint_grade_2">Grade 2</string>
    <string name="hint_grade_3">Grade 3</string>
    <string name="hint_grade_4">Grade 4</string>
    <string name="toast_invalid_grade">Invalid grades, please fill all grades.</string>
    <string name="message_final_grade">Final Grade: </string>
    <string name="message_approved">Approved!</string>
    <string name="message_reproved">Reproved!</string>
</resources>