<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/actionBar"
        android:layout_width="411dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:titleTextColor="@color/design_default_color_on_primary" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBar">

        <EditText
            android:id="@+id/grade1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:width="@dimen/grade_width"
            android:hint="@string/hint_grade_1"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/grade_min_height"
            android:textAlignment="center"
            android:textColorHint="@color/hintGrades" />

        <EditText
            android:id="@+id/grade2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:width="@dimen/grade_width"
            android:hint="@string/hint_grade_2"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/grade_min_height"
            android:textAlignment="center"
            android:textColorHint="@color/hintGrades" />

        <EditText
            android:id="@+id/grade3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:width="@dimen/grade_width"
            android:hint="@string/hint_grade_3"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/grade_min_height"
            android:textAlignment="center"
            android:textColorHint="@color/hintGrades" />

        <EditText
            android:id="@+id/grade4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:width="@dimen/grade_width"
            android:hint="@string/hint_grade_4"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/grade_min_height"
            android:textAlignment="center"
            android:textColorHint="@color/hintGrades" />

        <Button
            android:id="@+id/calculateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:width="@dimen/button_width"
            android:onClick="calcFinalGrade"
            android:text="@string/button_calculate"
            android:textAlignment="center"
            app:cornerRadius="@dimen/button_radius" />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:width="@dimen/button_width"
            android:onClick="resetGrades"
            android:text="@string/button_reset"
            app:cornerRadius="@dimen/button_radius" />

    </GridLayout>

    <TextView
        android:id="@+id/finalGradesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="40dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <ImageView
        android:id="@+id/finalGradeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalGradesTextView"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/approved" />

</androidx.constraintlayout.widget.ConstraintLayout>